@@ -86,6 +86,12 @@ bindaddr = 0.0.0.0
 ;secret = mysecret
 ;deny=0.0.0.0/0.0.0.0
 ;permit=209.16.236.73/255.255.255.0
+
+; 
+;setvar=PBXACCOUNT=edvina	
+; The setvar option defines channel variables that will be set when this account
+; originates a call. You can define multiple setvar= commands for one manager
+; user.
 ;
 ;eventfilter=Event: Newchannel
 ;eventfilter=!Channel: DAHDI*
