@@ -446,10 +446,11 @@ int ast_check_realtime(const char *family);
 /*! \brief Check if there's any realtime engines loaded */
 int ast_realtime_enabled(void);
 
-/*! \brief copy variables, preserving order 
- *  \param in the linked list of variables to copy
- */
-struct ast_variable *ast_variable_copy(struct ast_variable *in);
+/*! \brief copy variables, preserving order
+ *  \param in the linked list of variables 
+    \note This function is not copying the comment pointers
+*/
+struct ast_variable *ast_variable_copy(const struct ast_variable *in);
 
 /*!
  * \brief Free variable list
